Related: tdf#159343 Handle TableRef separator in brackets for Function Wizard

... not breaking to next argument of a function parameter.

Change-Id: Ibc7a64c4ea64c415098a213f0ff3d96b8a9dd73c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171085
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>